use the latest version of dist script on demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
     <li class="item" data-social="telegram">Share via Telegram message</li>
   </ul>
 
-  <script src="https://unpkg.com/vanilla-sharing/dist/vanilla-sharing.js"></script>
+  <script src="https://rawgit.com/avdeev/vanilla-sharing/master/dist/vanilla-sharing.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
   <script>
