Update the docs and demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,8 @@
   <h1><a href="https://github.com/avdeev/vanilla-sharing">vanilla-sharing</a> demo</h1>
 
   <ul>
-    <li class="item" data-social="fb">Share on Facebook</li>
+    <li class="item" data-social="fbFeed">Share on Facebook (Feed dialog)</li>
+    <li class="item" data-social="fbShare">Share on Facebook (Share dialog)</li>
     <li class="item" data-social="tw">Share on Twitter</li>
     <li class="item" data-social="gp">Share on Google</li>
     <li class="item" data-social="vk">Share on VK</li>
