docs(demo): add fbbutton

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,7 @@
   <ul>
     <li class="item" data-social="fbFeed">Share on Facebook (Feed dialog)</li>
     <li class="item" data-social="fbShare">Share on Facebook (Share dialog)</li>
+    <li class="item" data-social="fbbutton">Share on Facebook (Share button)</li>
     <li class="item" data-social="tw">Share on Twitter</li>
     <li class="item" data-social="gp">Share on Google</li>
     <li class="item" data-social="vk">Share on VK</li>
