--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,7 @@
     <li class="item" data-social="telegram">Share via Telegram message</li>
   </ul>
 
-  <script src="https://unpkg.com/vanilla-sharing@3.0.2/dist/vanilla-sharing.js"></script>
+  <script src="https://unpkg.com/vanilla-sharing"></script>
   <script>
     var options = {
       url: 'https://github.com/avdeev/vanilla-sharing',
