feat: add subject param to email sharer

--- a/demo/index.html
+++ b/demo/index.html
@@ -158,7 +158,7 @@
         url: META.URL,
         title: META.TITLE,
         description: META.DESCRIPTION,
-        image: META.IMAGE,
+        subject: META.TITLE,
       });
     });
 
