feat: add fbShare quote to docs and tests

--- a/demo/index.html
+++ b/demo/index.html
@@ -71,6 +71,7 @@
         redirectUri: META.URL,
         hashtag: '#vanilla-sharing',
         fbAppId: META.FB_APP_ID,
+        quote: META.DESCRIPTION,
       });
     });
 
